revert changes to use unmodifiableList